--- a/myspa/values.yaml
+++ b/myspa/values.yaml
@@ -1299,6 +1299,7 @@ nodeExporter:
 ## Configuration for prometheus-node-exporter subchart
 ##
 prometheus-node-exporter:
+  hostRootFsMount: false
   namespaceOverride: ""
   podLabels:
     ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
